--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ bfg.jar
 
 # To hide secure info
 *.env
+android/app/google-services.json
+ios/GoogleService-Info.plist
 
 # Not passing node_modules
 node_modules/
@@ -55,3 +57,4 @@ node_modules/
 Releases/*.apk
 Releases/*.ipa
 *.xcarchive
+android/app/src/main/res/xml/network_security_config.xml
