Auto fixing shit flutter_compass for android:)
DO NOT BUILD USING flutter build apk !!!
Build with `npm run build` first (or do `>Tasks: Run Build Task` and be done with it),  then you can debug on a simulator/device or make an apk with `flutter build apk`, or even Android Studio directly

--- a/.gitignore
+++ b/.gitignore
@@ -42,13 +42,13 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# To delete secure info
-bfg.jar
-
 # To hide secure info
 *.env
 android/app/google-services.json
 ios/GoogleService-Info.plist
+
+# This file changes between environments
+android/app/src/main/res/xml/network_security_config.xml
 
 # Not passing node_modules
 node_modules/
@@ -57,4 +57,3 @@ node_modules/
 Releases/*.apk
 Releases/*.ipa
 *.xcarchive
-android/app/src/main/res/xml/network_security_config.xml
