Trying to sign the app
To no avail, FUCK ANDROID, MAN
Now you need a specific android/key.properties, a keystore file (unique, only on my device currently, btw), besides from the .env file (unique as well) btw teehee

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,6 @@ android/app/src/main/res/xml/network_security_config.xml
 node_modules/
 
 # Don't store apps
-Releases/*.apk
-Releases/*.ipa
+*.apk
+*.ipa
 *.xcarchive
