GitHub actions auto-sign apk
maybe?

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,11 +62,25 @@ android {
     }
 
     signingConfigs {
-        release {
+        /*release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
             storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
             storePassword keystoreProperties['storePassword']
+        }*/
+        release {
+            def tmpFilePath = System.getProperty("user.home") + "/Centinela/keystore/"
+            def allFilesFromDir = new File(tmpFilePath).listFiles()
+
+            if (allFilesFromDir != null) {
+                def keystoreFile = allFilesFromDir.first()
+                keystoreFile.renameTo("keystore/centinela.jks")
+            }
+
+            storeFile = file("keystore/centinela.jks")
+            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+            keyAlias System.getenv("SIGNING_KEY_ALIAS")
+            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
         }
     }
 
