--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -16,10 +16,9 @@ jobs:
       - name: set up JDK 1.9
         uses: actions/setup-java@v4
         with:
-          distribution: 'oracle' # See 'Supported distributions' for available options
+          distribution: 'temurin'
           java-version: '21'
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+          cache: 'gradle'
       - name: build prod
         run: ./gradlew app:bundleRelease
         env:
