--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,7 +1,8 @@
 gradle-wrapper.jar
 /.gradle
 /captures/
-/gradlew
+# A pasarlo para que se pueda compilar con GitHub Actions
+# /gradlew
 /gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
