--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,8 +1,7 @@
+gradle-wrapper.jar
 /.gradle
 /captures/
-# A pasarlo para que se pueda compilar con GitHub Actions
-# gradle-wrapper.jar
-# /gradlew
+/gradlew
 /gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
