--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -8,23 +8,29 @@ jobs:
     steps:
       - name: Decode Keystore
         id: decode_keystore
-        uses: timheuer/base64-to-file@v1
+        uses: timheuer/base64-to-file@v1.2.4
         with:
           fileName: 'keystore/centinela.jks'
           encodedString: ${{ secrets.KEYSTORE }}
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4.1.1
       - name: set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v4.2.1
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
-      - uses: subosito/flutter-action@v2
+      - uses: actions/setup-node@v4.0.2
+        with:
+          node-version: '16'
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - uses: subosito/flutter-action@v2.14.0
         with:
           flutter-version: '3.16.9'
       - name: Get dependencies
         run: flutter pub get
-      #- run: flutter test
       - name: Build APK
         run: flutter build apk --release
         env:
@@ -36,13 +42,13 @@ jobs:
           SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
           SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
           SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-        run: flutter build appbundle
+        run: flutter build appbundle --release
       - name: Move build outputs
         run: |
           mkdir -p Releases
           mv android/app/build/outputs/* Releases/
       - name: Upload
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4.3.1
         with:
           name: Builds
-          path: app/build/outputs/
+          path: Releases/
