--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -28,7 +28,9 @@ jobs:
         run: npm run build
       - uses: subosito/flutter-action@v2.14.0
         with:
-          flutter-version: '3.16.9'
+          flutter-version: '3.19.4'
+          channel: stable
+          cache: true
       - name: Get dependencies
         run: flutter pub get
       - name: Build APK
