--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
-    "plist": "^3.1.0"
+    "plist": "^3.1.0",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "build": "node generate-config.js"
