--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -13,19 +13,18 @@ jobs:
           fileName: 'keystore/centinela.jks'
           encodedString: ${{ secrets.KEYSTORE }}
       - uses: actions/checkout@v4.1.1
-      - name: set up JDK 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v4.2.1
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
-      - uses: actions/setup-node@v4.0.2
+      - name: Set up Node 20
+        uses: actions/setup-node@v4.0.2
         with:
-          node-version: '16'
+          node-version: '20'
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build
       - uses: subosito/flutter-action@v2.14.0
         with:
           flutter-version: '3.19.4'
@@ -33,6 +32,8 @@ jobs:
           cache: true
       - name: Get dependencies
         run: flutter pub get
+      - name: Fix garbage flutter_compass
+        run: npm run build
       - name: Build APK
         run: flutter build apk --release
         env:
