--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
     {
       "type": "shell",
       "label": "Build IPA",
-      "command": "npm run build && mkdir -p Releases && rm -rdf build/ios/archive/Runner.xcarchive && flutter build ipa && cd build/ios/archive/Runner.xcarchive/Products && mv Applications Payload && zip -r ../../../../../Releases/Custodes.ipa Payload/ && cd ../../ && rm -rd Runner.xcarchive",
+      "command": "npm run build && mkdir -p Releases && rm -rdf build/ios/archive/Runner.xcarchive && flutter build ipa --no-codesign && cd build/ios/archive/Runner.xcarchive/Products && mv Applications Payload && zip -r ../../../../../Releases/Custodes.ipa Payload/ && cd ../../ && rm -rd Runner.xcarchive",
       "group": "build"
     },
     {
