--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -30,11 +30,12 @@ jobs:
           flutter-version: '3.19.4'
           channel: stable
           cache: true
+          cache-key: 'flutter-:os:-:channel:-:version:-:arch:'
       - name: Get dependencies
         run: flutter pub get
       - name: Fix garbage flutter_compass and make essential changes
         run: npm run build
-      - name: Print google-services.json
+      - name: Print google-services.json (TO BE REMOVED)
         run: cat android/app/google-services.json
       - name: Build APK
         run: flutter build apk --release
