--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -14,5 +14,7 @@ jobs:
         with:
           fileName: 'android/app/keystore/centinela.jks'
           encodedString: ${{ secrets.KEYSTORE }}
+      - name: Decode Keystore
+        run: echo "${{ secrets.KEYSTORE }}" | base64 --decode > android/app/keystore/centinela-Alt.jks
       - name: List keystore directory
         run: ls -l android/app/keystore/
