--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -14,10 +14,6 @@ jobs:
           fileName: 'centinela.jks'
           fileDir: './android/app/keystore/'
           encodedString: ${{ secrets.KEYSTORE }}
-      - name: List keystore directory
-        run: ls -l android/app/keystore/
-      - name: List supposed keystore directory
-        run: ls -l /home/runner/work/Custodes/Custodes/android/app/keystore/
       - name: Set up JDK 21
         uses: actions/setup-java@v4.2.1
         with:
@@ -66,7 +62,8 @@ jobs:
       - name: Move build outputs
         run: |
           mkdir -p Releases
-          mv android/app/build/outputs/* Releases/
+          mv android/build/app/outputs/app-release.apk Releases/
+          mv android/build/app/outputs/app-release.aab Releases/
       - name: Upload
         uses: actions/upload-artifact@v4.3.1
         with:
